--- a/conf/billing.yml
+++ b/conf/billing.yml
@@ -21,11 +21,11 @@ business:
 
 # MYSQL 数据库配置 
 mysql:
-  host: 
+  host: 10.248.22.138
   port: 3306
-  user: 
-  password: 
-  dbname: 
+  user: billing
+  password: '80b4d877550de350ff4bd650625f923e'
+  dbname: boss_billing
   charset: utf8
   # 池中的初始空闲连接数（0 表示启动时没有建立连接）
   mincached: 1
@@ -40,8 +40,8 @@ mysql:
 
 # ElasticSearch 搜索引擎配置
 elasticsearch:
-  account: 
-  password: 
+  account: 'elastic'
+  password: 'ce982fcdac87e22a0333595e261ee867'
   hosts:
   - { 'host':'10.248.50.224', 'port': 9001}
   - { 'host':'10.248.50.224', 'port': 9002}
@@ -50,6 +50,6 @@ elasticsearch:
 # ElasticSearch 搜索引擎配置
 es:
   hosts:
-  - { 'host':'10.248.50.224', 'port': 9001, 'http_auth': '', 'timeout': 120}
-  - { 'host':'10.248.50.224', 'port': 9002, 'http_auth': '', 'timeout': 120}
-  - { 'host':'10.248.50.224', 'port': 9003, 'http_auth': '', 'timeout': 120}
+  - { 'host':'10.248.50.224', 'port': 9001, 'http_auth': '014b58793dd2fed9ce982fcdac87e22a0333595e261ee867', 'timeout': 120}
+  - { 'host':'10.248.50.224', 'port': 9002, 'http_auth': '014b58793dd2fed9ce982fcdac87e22a0333595e261ee867', 'timeout': 120}
+  - { 'host':'10.248.50.224', 'port': 9003, 'http_auth': '014b58793dd2fed9ce982fcdac87e22a0333595e261ee867', 'timeout': 120}
